Fixed scroll lock on iOS

--- a/css/demo.css
+++ b/css/demo.css
@@ -20,8 +20,7 @@ body {
 }
 .wrapper{
 	position: relative;
-	overflow-x: hidden;
-	overflow-y: hidden;
+	overflow:hidden;
 }
 body {
 	font-family: 'Source Sans Pro', Avenir, 'Helvetica Neue', Helvetica, Arial, sans-serif;
